# vxrt

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  LICENSE  README.md  rustfmt.toml
cmake/: FindGLEW.cmake  TargetDefaultCompileOptions.cmake
release/Shaders/: Basic.fsh  Basic.vsh  Final.fsh  Final.vsh  Main.csh  Present.fsh  Present.vsh
shaders/: basic.vsh  main.csh
src/: bitmap.cpp  bitmap.h  camera.h  camera.rs  common.h  config.cpp  config.h  debug.h  framebuffer.cpp  framebuffer.h  lib.rs  log.h  logger.h  main.cpp  main.rs  mat.h  model.rs  opengl.cpp  opengl.h  renderer.cpp  renderer.h  resources.rs  shader.cpp  shader.h  shaderbuffer.cpp  shaderbuffer.h  shaderstorage.cpp  shaderstorage.h  shaderstoragebuffer.cpp  shaderstoragebuffer.h  texture.cpp  texture.h  texture.rs  texturearray.cpp  texturearray.h  tree.cpp  tree.h  updatescheduler.cpp  updatescheduler.h  vec.h  (+6 more)
src/shaders/: light.wgsl  shader.wgsl
