[package]
name = "vxrt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
bincode = "1.3.3"
bytemuck = { version = "1.14.0", features = ["derive"] }
cgmath = "0.18.0"
env_logger = "0.10.1"
image = "0.24.7"
log = "0.4.20"
pollster = "0.3.0"
serde = { version = "1.0.192", features = ["derive"] }
tobj = { version = "4.0.0", features = ["async"] }
wgpu = "0.18.0"
winit = "0.28.0"

[[bin]]
name = "vxrt"
test = false
bench = false
